force-app/main/default/objects/Activity_Template__c/Activity_Template__c.object-meta.xml
<CustomObject>
    <label>Activity Template</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Activity Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>