force-app/main/default/objects/Activity_Template__c/fields/SR_Area__c.field-meta.xml
<CustomField>
    <fullName>SR_Area__c</fullName>
    <label>SR Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order1</fullName>
            </value>
            <value>
                <fullName>Solicitud1</fullName>
            </value>
            <value>
                <fullName>Cambio1</fullName>
            </value>
            <value>
                <fullName>Order2</fullName>
            </value>
            <value>
                <fullName>Solicitud2</fullName>
            </value>
            <value>
                <fullName>Cambio2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>