force-app/main/default/objects/Activity_Template__c/fields/SR_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>SR_Sub_Area__c</fullName>
    <label>SR Sub Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SubOrder11</fullName>
            </value>
            <value>
                <fullName>Order21</fullName>
            </value>
            <value>
                <fullName>Cambio11</fullName>
            </value>
            <value>
                <fullName>Cambio21</fullName>
            </value>
            <value>
                <fullName>Solicitude11</fullName>
            </value>
            <value>
                <fullName>Solicitude12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>