force-app/main/default/objects/Activity_Template__c/fields/SR_Type__c.field-meta.xml
<CustomField>
    <fullName>SR_Type__c</fullName>
    <label>SR Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Solicitud</fullName>
            </value>
            <value>
                <fullName>Cambio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>