force-app/main/default/objects/Activity_Template__c/fields/Temp_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Temp Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>